--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -1,1 +1,30 @@
-<p>authorization works!</p>
+<section class="auth">
+  <div class="auth__container">
+    <div class="auth__form">
+      <mat-form-field>
+        <mat-label> Введите email </mat-label>
+        <input matInput placeholder="pat@example.com" required />
+        <!-- @if (email.invalid) {
+        <mat-error> {{ errorMessage() }} </mat-error>
+        } -->
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Enter your password</mat-label>
+        <input matInput [type]="hide() ? 'password' : 'text'" />
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="clickEvent($event)"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide()"
+        >
+          <mat-icon>{{ hide() ? "visibility_off" : "visibility" }}</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
+  </div>
+</section>
+
+<!-- [formControl]="email"
+blur="updateErrorMessage()"  -->
