--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
   --main-light-color: #ffffff;
   --main-dark-color: #000000;
   --accent-light-color: #f8f1ff;
@@ -9,7 +8,11 @@ html {
 body {
   width: 80%;
   max-width: 880px;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   margin: 0 auto;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: var(--main-light-color);
@@ -24,13 +27,16 @@ body {
 }
 
 .header {
+  width: 100%;
   margin: 0 auto;
   padding: 20px 0;
   box-sizing: border-box;
   border-bottom: 1px solid var(--accent-dark-color);
+  font-weight: 500;
 }
 
 .footer {
+  width: 100%;
   margin: 0 auto;
   padding: 20px 0;
   box-sizing: border-box;
