--- a/src/app/devices-list/devices-list.component.html
+++ b/src/app/devices-list/devices-list.component.html
@@ -1,20 +1,20 @@
-<section class="devices">
-  <table class="devices__table">
-    <thead>
-      <th>ID</th>
-      <th>Название</th>
-      <th>Дата последней активности</th>
-    </thead>
-    <tbody>
-      @for (device of devicesList; track device.id) {
-      <tr>
-        <td>{{ device.id }}</td>
-        <td>{{ device.name }}</td>
-        <td>
-          {{ device.last_active | date : "dd.MM.yyyy HH:mm" : "UTC+4" }}
-        </td>
-      </tr>
-      }
-    </tbody>
-  </table>
-</section>
+<table mat-table [dataSource]="devicesList" class="mat-elevation-z8">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>ID</th>
+    <td mat-cell *matCellDef="let device">{{ device.id }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Название</th>
+    <td mat-cell *matCellDef="let device">{{ device.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="last_active">
+    <th mat-header-cell *matHeaderCellDef>Дата последней активности</th>
+    <td mat-cell *matCellDef="let device">
+      {{ device.last_active | date : "dd.MM.yyyy HH:mm" : "UTC+4" }}
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
