--- a/src/styles.css
+++ b/src/styles.css
@@ -59,3 +59,12 @@ body {
 .link:hover {
   opacity: 0.8;
 }
+
+/* html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+} */
