--- a/src/app/devices-list/devices-list.component.css
+++ b/src/app/devices-list/devices-list.component.css
@@ -1,6 +1,8 @@
 table {
-  width: 80%;
+  width: 100%;
   border-radius: 8%;
   border: none;
-  box-shadow: 0px 0px 35px -5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 35px -5px rgba(0, 0, 0, 0.75);
+  padding: 30px;
+  box-sizing: border-box;
 }
