--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -5,8 +5,14 @@
   border: none;
   box-shadow: 0px 0px 35px -5px rgba(0, 0, 0, 0.75);
   margin: auto;
-  padding: 149px 92px 83px;
+  padding: 83px 92px 83px;
   box-sizing: border-box;
+}
+
+.login__title {
+  margin-bottom: 60px;
+  font-size: large;
+  color: var(--main-accent-color);
 }
 
 .login__form {
