--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -45,4 +45,14 @@
       Войти
     </button>
   </form>
+  <p
+    style="
+      font-size: 12px;
+      text-align: center;
+      margin-top: 10px;
+      color: var(--second-accent-color);
+    "
+  >
+    {{ errorMessage }}
+  </p>
 </section>
