fix: browser history & redirect

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -25,6 +25,7 @@
       />
       <button
         mat-icon-button
+        type="button"
         matSuffix
         (click)="isPasswordHidden.set(!isPasswordHidden())"
       >
